--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
