--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "js-cookie": "^3.0.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.7",
